--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,15 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          version="2.5">
-    <display-name>ivote</display-name>
+    <display-name>voter</display-name>
     <description>This is a vote application.</description>
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:org/silencer/ivote/config/applicationContext-voter.xml</param-value>
+        <param-value>classpath:org/silencer/voter/config/applicationContext-voter.xml</param-value>
     </context-param>
     <context-param>
         <param-name>log4jConfigLocation</param-name>
-        <param-value>classpath:org/silencer/ivote/config/log4j.properties</param-value>
+        <param-value>classpath:org/silencer/voter/config/log4j.properties</param-value>
     </context-param>
     <context-param>
         <param-name>log4jRefreshInterval</param-name>
@@ -48,7 +48,7 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:/org/silencer/ivote/config/applicationContext-springmvc.xml</param-value>
+            <param-value>classpath:/org/silencer/voter/config/applicationContext-springmvc.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
