--- a/docs/db-schema/voterdb.yaml
+++ b/docs/db-schema/voterdb.yaml
@@ -3,4 +3,13 @@ user:
   username: string
   email: string
   password: string
+  fullname: string
+  smphoto: bytes
+  lgphoto: bytes
+  location: string
+  joineddate: date
+  votecounter:
+    votes: int
+    voted: int
+    starred: int
 
