1.添加spring security配置 2.vote表增加lastUpdateTime字段

--- a/docs/db-schema/voterdb.yaml
+++ b/docs/db-schema/voterdb.yaml
@@ -23,6 +23,7 @@ vote:
   isMulti: boolean
   isDel: boolean
   delTime: date
+  lastUpdateTime: date
   choices:
     - no: int
       content: string
