1.完善spring security 2.处理spring mongodb 3.user表添加isEnabled字段

--- a/docs/db-schema/voterdb.yaml
+++ b/docs/db-schema/voterdb.yaml
@@ -8,6 +8,7 @@ user:
   lgPhoto: bytes
   location: string
   joinedDate: date
+  isEnabled: boolean
   voteCounter:
     votes: int
     voted: int
