--- a/src/main/resources/org/silencer/voter/config/application.properties
+++ b/src/main/resources/org/silencer/voter/config/application.properties
@@ -1,5 +1,5 @@
 mongo.host=localhost
 mongo.port=27017
 mongo.dbname=voter
-mongo.username=
-mongo.password=
+mongo.username=voter
+mongo.password=voter
