1.user表添加phone字段 2.处理spring mvc

--- a/docs/db-schema/voterdb.yaml
+++ b/docs/db-schema/voterdb.yaml
@@ -4,6 +4,7 @@ user:
   email: string
   password: string
   fullname: string
+  phone: string
   smPhoto: bytes
   lgPhoto: bytes
   location: string
