--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <properties>
         <spring.version>3.2.8.RELEASE</spring.version>
         <spring-security.version>3.2.4.RELEASE</spring-security.version>
+        <jackson.version>2.4.2</jackson.version>
 
     </properties>
     <dependencies>
@@ -52,6 +53,17 @@
             <version>1.5.2.RELEASE</version>
         </dependency>
         <!--spring end -->
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.mongodb</groupId>
