1.完成用户注册

--- a/src/main/resources/org/silencer/voter/config/application.properties
+++ b/src/main/resources/org/silencer/voter/config/application.properties
@@ -1,5 +1,9 @@
+#mongo property config
 mongo.host=localhost
 mongo.port=27017
 mongo.dbname=voter
 mongo.username=voter
 mongo.password=voter
+
+#spring security property config
+security.password.encoder.salt=silencer
