1.初步完成注册处理

--- a/src/main/resources/org/silencer/voter/config/application.properties
+++ b/src/main/resources/org/silencer/voter/config/application.properties
@@ -4,6 +4,7 @@ mongo.port=27017
 mongo.dbname=voter
 mongo.username=voter
 mongo.password=voter
+mongo.writeconcern=SAFE
 
 #spring security property config
 security.password.encoder.salt=silencer
