--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,11 @@
             <version>2.1</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.taglibs</groupId>
+            <artifactId>taglibs-standard-jstlel</artifactId>
+            <version>1.2.1</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>voter-server-webapp</finalName>
