--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -84,4 +84,8 @@
             <include-prelude>/WEB-INF/include/head.jspf</include-prelude>
         </jsp-property-group>
     </jsp-config>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/404.jsp</location>
+    </error-page>
 </web-app>
