--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <description>Product code:LipLit (Lipotes Lithops)</description>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.silencer</groupId>
     <artifactId>voter-server-webapp</artifactId>
@@ -7,6 +8,7 @@
     <version>1.0-SNAPSHOT</version>
     <name>voter-server-webapp</name>
     <url>http://maven.apache.org</url>
+
     <properties>
         <spring.version>3.2.8.RELEASE</spring.version>
         <spring-security.version>3.2.4.RELEASE</spring-security.version>
@@ -92,6 +94,16 @@
             <artifactId>taglibs-standard-jstlel</artifactId>
             <version>1.2.1</version>
         </dependency>
+        <!--<dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-coyote</artifactId>
+            <version>7.0.8</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-catalina</artifactId>
+            <version>7.0.8</version>
+        </dependency>-->
     </dependencies>
     <build>
         <finalName>voter-server-webapp</finalName>
