--- a/src/main/resources/org/silencer/voter/config/application.properties
+++ b/src/main/resources/org/silencer/voter/config/application.properties
@@ -8,3 +8,9 @@ mongo.writeconcern=SAFE
 
 #spring security property config
 security.password.encoder.salt=silencer
+
+#system property config
+#系统分页查询初始加载数量
+system.pagesize.initload=20
+#系统分页查询每次动态加载数量
+system.pagesize.perload=10
